# vigir_perception

./: README.md
vigir_crop_decimate/: CMakeLists.txt  mainpage.dox  manifest.xml
vigir_crop_decimate/include/vigir_crop_decimate/: crop_decimate.h
vigir_crop_decimate/src/: crop_decimate.cpp
vigir_crop_decimate_nodelet/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_crop_decimate_nodelet/src/: crop_decimate_node.cpp  crop_decimate_nodelet.cpp  crop_decimate_requester_nodelet.cpp
vigir_filtered_localized_scan_utils/: CMakeLists.txt  README.md  package.xml
vigir_filtered_localized_scan_utils/include/vigir_filtered_localized_scan_utils/: filtered_localized_scan_converter.h  filtered_localized_scan_converter_ros.h  filtered_localized_scan_splitter.h  filtered_localized_scan_splitter_ros.h
vigir_filtered_localized_scan_utils/launch/: atlas_scan_to_cloud.launch  test_splitter.launch
vigir_filtered_localized_scan_utils/src/: scan_split_node.cpp  scan_to_clouds_pub_node.cpp
vigir_image_proc/: README
vigir_image_proc/vigir_crop_decimate/: .gitignore  CMakeLists.txt  package.xml
vigir_image_proc/vigir_crop_decimate/src/: crop_decimate.cpp
vigir_image_proc/vigir_crop_decimate_nodelet/: manifest.xml  package.xml
vigir_image_proc/vigir_crop_decimate_nodelet/plugin_descriptions/: vigir_crop_decimate_nodelet.xml  vigir_crop_decimate_requester_nodelet.xml
vigir_image_proc/vigir_crop_decimate_nodelet/src/: crop_decimate_node.cpp  crop_decimate_nodelet.cpp  crop_decimate_requester_node.cpp  crop_decimate_requester_nodelet.cpp
vigir_image_proc/vigir_localized_image_nodelet/: CMakeLists.txt  nodelet_plugins.xml  package.xml
vigir_image_proc/vigir_localized_image_nodelet/cfg/: Rectify.cfg
vigir_image_proc/vigir_localized_image_nodelet/launch/: multisense_left_example.launch  standalone_sa_camera_nodelets.launch
vigir_image_proc/vigir_localized_image_nodelet/plugin_descriptions/: vigir_localized_image_nodelet.xml
vigir_image_proc/vigir_localized_image_nodelet/src/: localized_image_node.cpp  localized_image_nodelet.cpp
vigir_image_proc/vigir_localized_image_nodelet/src/nodelets/: rectify.cpp
vigir_image_proc/vigir_localized_image_proc/: CMakeLists.txt  package.xml
vigir_image_proc/vigir_localized_image_proc/include/vigir_localized_image_proc/: localized_image_proc.h
vigir_image_proc/vigir_localized_image_proc/src/: localized_image_proc.cpp
vigir_image_proc/vigir_wide_angle_image_prok/: CMakeLists.txt  nodelet_plugins.xml  package.xml
vigir_image_proc/vigir_wide_angle_image_prok/launch/: sa_camera_nodelets.launch  sa_camera_nodelets_calibration.launch  test_left_sa_camera.launch
vigir_image_proc/vigir_wide_angle_image_prok/src/nodelets/: rectify.cpp
vigir_point_cloud_proc/: CMakeLists.txt  README.md  package.xml
vigir_point_cloud_proc/include/vigir_point_cloud_proc/: cloud_to_mesh.h  cloud_to_mesh_ros.h  depth_image_to_mesh.h  depth_image_to_mesh_ros.h  mesh_conversions.h
vigir_point_cloud_proc/launch/: .multisense_depth_image.launch.kate-swp  multisense_depth_image.launch  multisense_depth_image_transformed_throttled.launch  vigir_worldmodel.launch  vigir_worldmodel_unfiltered_cloud_meshing.launch
vigir_point_cloud_proc/src/: cloud_to_mesh_node.cpp  depth_image_to_mesh_node.cpp
vigir_worldmodel_server/: .gitignore  CMakeLists.txt  README.md  mainpage.dox  package.xml
vigir_worldmodel_server/cfg/: WorldmodelGridMapper.cfg
vigir_worldmodel_server/include/vigir_worldmodel_server/communication/: worldmodel_communication.h
vigir_worldmodel_server/include/vigir_worldmodel_server/core/: worldmodel_cloud_types.h  worldmodel_core.h
vigir_worldmodel_server/include/vigir_worldmodel_server/octomap/: octomap_container.h  octomap_visualization.h  worldmodel_octomap.h  worldmodel_octomap_ros_interface.h
vigir_worldmodel_server/include/vigir_worldmodel_server/point_cloud/: point_cloud_aggregator.h  point_cloud_container.h  point_cloud_visualization.h
vigir_worldmodel_server/include/vigir_worldmodel_server/sensors/: compressed_lidar_subscription_adapter.h  point_cloud_subscription_adapter.h
vigir_worldmodel_server/include/vigir_worldmodel_server/state/: stab_republisher.h  state_provider.h  state_republisher_interface.h  tf_pose_republisher.h  transform_service_provider.h
vigir_worldmodel_server/launch/: test_octo.launch  test_stereo_clouds.launch  worldmodel_colored_cloud.launch  worldmodel_default.launch  worldmodel_ocs.launch  worldmodel_odom_root.launch
vigir_worldmodel_server/maps/: .gitignore  README
vigir_worldmodel_server/src/: worldmodel_main.cpp  worldmodel_server_node.cpp
