<?xml version="1.0"?>
<package>
  <name>vigir_point_cloud_proc</name>
  <version>0.0.0</version>
  <description>The vigir_point_cloud_proc package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>depth_image_proc</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  
  <build_depend>visualization_msgs</build_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
  </export>
</package>
