<package>
  <name>vigir_worldmodel_server</name>
  <version>0.0.1</version>
  <description>The vigir_worldmodel_server package</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hector_nav_msgs</build_depend>
  <!--<build_depend>flor_perception_msgs</build_depend>-->
  <build_depend>vigir_perception_msgs</build_depend>
  <!--<build_depend>flor_utilities</build_depend>-->
  <build_depend>actionlib</build_depend>
  <build_depend>hector_std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>hector_nav_msgs</run_depend>
  <!--<run_depend>flor_perception_msgs</run_depend>-->
  <run_depend>vigir_perception_msgs</run_depend>
  <!--<run_depend>flor_utilities</run_depend>-->
  <run_depend>actionlib</run_depend>
  <run_depend>hector_std_msgs</run_depend>

</package>

