<package>
  <name>vigir_crop_decimate_nodelet</name>
  <version>0.0.1</version>
  <description>The vigir_crop_decimate_nodelet package</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>vigir_crop_decimate</build_depend>
  <build_depend>vigir_perception_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>vigir_crop_decimate</run_depend>
  <run_depend>vigir_perception_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugin_descriptions/vigir_crop_decimate_nodelet.xml" />
    <nodelet plugin="${prefix}/plugin_descriptions/vigir_crop_decimate_requester_nodelet.xml" />
  </export>

</package>
