<package>
  <name>vigir_localized_image_nodelet</name>
  <version>0.0.1</version>
  <description>The vigir_localized_image_nodelet package</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>vigir_localized_image_proc</build_depend>
  <build_depend>flor_perception_msgs</build_depend>
  <build_depend>vigir_perception_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>vigir_localized_image_proc</run_depend>
  <run_depend>flor_perception_msgs</run_depend>
  <run_depend>vigir_perception_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>


  <export>
    <nodelet plugin="${prefix}/plugin_descriptions/vigir_localized_image_nodelet.xml" />
  </export>

</package>
